--- a/.github/workflows/push-app.yml
+++ b/.github/workflows/push-app.yml
@@ -14,3 +14,9 @@ jobs:
 
       - name: Semantic Release
         uses: cycjimmy/semantic-release-action@v4
+        with:
+          extra_plugins: |
+            @semantic-release/git
+            @semantic-release/exec
+            @semantic-release/changelog
+            @google/semantic-release-replace-plugin
