--- a/.github/workflows/push-app.yml
+++ b/.github/workflows/push-app.yml
@@ -14,6 +14,8 @@ jobs:
 
       - name: Semantic Release
         uses: cycjimmy/semantic-release-action@v4
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           extra_plugins: |
             @semantic-release/git
