--- a/.github/workflows/push-chart.yaml
+++ b/.github/workflows/push-chart.yaml
@@ -16,3 +16,8 @@ jobs:
         uses: cycjimmy/semantic-release-action@v4
         with: 
           working_directory: deployment
+          extra_plugins: |
+            @semantic-release/git
+            @semantic-release/exec
+            @semantic-release/changelog
+            @google/semantic-release-replace-plugin
