--- a/deployment/.releaserc.yaml
+++ b/deployment/.releaserc.yaml
@@ -1,3 +1,4 @@
+tagFormat: chart-v${version}
 branches:
   - main
 plugins:
@@ -6,7 +7,6 @@ plugins:
   - "@semantic-release/git"
   - "@semantic-release/github"
   - "@google/semantic-release-replace-plugin"
-tagFormat: v${version}
 verifyConditions: "@semantic-release/github"
 analyzeCommits: "@semantic-release/commit-analyzer"
 generateNotes:
