--- a/.github/workflows/push-app.yaml
+++ b/.github/workflows/push-app.yaml
@@ -26,3 +26,15 @@ jobs:
             @semantic-release/exec
             @semantic-release/changelog
             @google/semantic-release-replace-plugin
+
+      - name: Semantic Release
+        uses: cycjimmy/semantic-release-action@v4
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}        
+        with: 
+          extra_plugins: |
+            @semantic-release/git
+            @semantic-release/exec
+            @semantic-release/changelog
+            @google/semantic-release-replace-plugin
+          working_directory: deployment            
