--- a/.releaserc.yaml
+++ b/.releaserc.yaml
@@ -52,6 +52,6 @@ prepare:
     message: "bump app version: ${nextRelease.version}"
     assets:
       - "deployment/helm-chart/Chart.yaml"
-#publish: "@semantic-release/github"
+publish: "@semantic-release/github"
 success: false
 fail: false
