--- a/.github/workflows/push-app.yaml
+++ b/.github/workflows/push-app.yaml
@@ -5,8 +5,8 @@ on:
     branches:
       - 'main'  
     paths:
-      - 'deployment/cmd/**'
-      - 'deployment/internal/**'
+      - 'cmd/**'
+      - 'internal/**'
 
 jobs:
   push-app:
