--- a/.github/workflows/bump-app-chart.yaml
+++ b/.github/workflows/bump-app-chart.yaml
@@ -1,20 +1,32 @@
-name: PushChart
-run-name: ${{ github.actor }} pushed chart updates
+name: BumpAppChart
+run-name: ${{ github.actor }} pushed app updates
 on: 
   push:
     branches:
       - 'main'  
     paths:
-      - 'deployment/helm-chart/**'
+      - 'cmd/**'
+      - 'internal/**'
 
 jobs:
-  push-chart:
+  push-app:
     runs-on: ubuntu-latest
     steps:
       - name: Check out repository code
         uses: actions/checkout@v4
         with:
           persist-credentials: false
+
+      - name: Semantic Release
+        uses: cycjimmy/semantic-release-action@v4
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          extra_plugins: |
+            @semantic-release/git
+            @semantic-release/exec
+            @semantic-release/changelog
+            @google/semantic-release-replace-plugin
 
       - name: Semantic Release
         uses: cycjimmy/semantic-release-action@v4
@@ -26,4 +38,4 @@ jobs:
             @semantic-release/exec
             @semantic-release/changelog
             @google/semantic-release-replace-plugin
-          working_directory: deployment
+          working_directory: deployment            
