--- a/.github/workflows/bump-chart.yaml
+++ b/.github/workflows/bump-chart.yaml
@@ -1,32 +1,23 @@
-name: PushApp
-run-name: ${{ github.actor }} pushed app updates
+name: BumpChartOnly
+run-name: ${{ github.actor }} pushed chart updates
 on: 
   push:
     branches:
       - 'main'  
     paths:
+      - 'deployment/helm-chart/**'
+    paths-ignore:
       - 'cmd/**'
       - 'internal/**'
 
 jobs:
-  push-app:
+  push-chart:
     runs-on: ubuntu-latest
     steps:
       - name: Check out repository code
         uses: actions/checkout@v4
         with:
           persist-credentials: false
-
-      - name: Semantic Release
-        uses: cycjimmy/semantic-release-action@v4
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          extra_plugins: |
-            @semantic-release/git
-            @semantic-release/exec
-            @semantic-release/changelog
-            @google/semantic-release-replace-plugin
 
       - name: Semantic Release
         uses: cycjimmy/semantic-release-action@v4
@@ -38,4 +29,4 @@ jobs:
             @semantic-release/exec
             @semantic-release/changelog
             @google/semantic-release-replace-plugin
-          working_directory: deployment            
+          working_directory: deployment
