--- a/.github/workflows/bump-app-chart.yaml
+++ b/.github/workflows/bump-app-chart.yaml
@@ -3,10 +3,7 @@ run-name: ${{ github.actor }} pushed app updates
 on: 
   push:
     branches:
-      - 'main'  
-    paths:
-      - 'cmd/**'
-      - 'internal/**'
+      - 'main'
 
 jobs:
   push-app:
@@ -17,25 +14,39 @@ jobs:
         with:
           persist-credentials: false
 
-      - name: Semantic Release
-        uses: cycjimmy/semantic-release-action@v4
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - uses: dorny/paths-filter@v3
+        id: changes
         with:
-          extra_plugins: |
-            @semantic-release/git
-            @semantic-release/exec
-            @semantic-release/changelog
-            @google/semantic-release-replace-plugin
+          filters: |
+            app:
+              - 'cmd/**'
+              - 'internal/**'
+            chart:
+              - 'deployment/helm-chart/**'
 
-      - name: Semantic Release
-        uses: cycjimmy/semantic-release-action@v4
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}        
-        with: 
-          extra_plugins: |
-            @semantic-release/git
-            @semantic-release/exec
-            @semantic-release/changelog
-            @google/semantic-release-replace-plugin
-          working_directory: deployment            
+      - if: steps.changes.outputs.app == 'true'
+        steps:
+          - name: Semantic Release
+            uses: cycjimmy/semantic-release-action@v4
+            env:
+              GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+            with:
+              extra_plugins: |
+                @semantic-release/git
+                @semantic-release/exec
+                @semantic-release/changelog
+                @google/semantic-release-replace-plugin
+
+      - if: ${{ steps.changes.outputs.app == 'true' || steps.changes.outputs.chart == 'true' }}
+        steps:
+          - name: Semantic Release
+            uses: cycjimmy/semantic-release-action@v4
+            env:
+              GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}        
+            with: 
+              extra_plugins: |
+                @semantic-release/git
+                @semantic-release/exec
+                @semantic-release/changelog
+                @google/semantic-release-replace-plugin
+              working_directory: deployment            
