--- a/.releaserc.yaml
+++ b/.releaserc.yaml
@@ -1,16 +1,47 @@
 tagFormat: app-v${version}
-branches:
-  - main
-plugins:
-  - - "@semantic-release/commit-analyzer"
-    - preset: conventionalcommits
-      releaseRules:
-        - type: fix(app)
-          release: patch
-        - type: feat(app)
-          release: minor
-        - type: feat(app)!
-          release: major
-  - "@semantic-release/release-notes-generator"
-  - "@semantic-release/github"
-  - "@google/semantic-release-replace-plugin"
+# plugins:
+#   - - "@semantic-release/commit-analyzer"
+#     - preset: conventionalcommits
+#       releaseRules:
+#         - type: fix(app)
+#           release: patch
+#         - type: feat(app)
+#           release: minor
+#         - type: feat(app)!
+#           release: major
+#   - "@semantic-release/release-notes-generator"
+#   - "@semantic-release/github"
+#   - - "@google/semantic-release-replace-plugin"
+#     - replacements:
+#         - files: "helm-chart/Chart.yaml"
+#           allowEmptyPaths: false
+#           disableGlobs: false
+#           from: "^version: .*"
+#           to: "version: ${nextRelease.version}"
+verifyConditions: "@semantic-release/github"
+analyzeCommits: 
+  - path: "@semantic-release/commit-analyzer"
+    preset: conventionalcommits
+    releaseRules:
+      - type: fix(chart)
+        release: patch
+      - type: feat(chart)
+        release: minor
+      - type: feat(chart)!
+        release: major
+generateNotes:
+  - path: "@semantic-release/release-notes-generator"
+    preset: conventionalcommits
+prepare:
+  - - "@google/semantic-release-replace-plugin"
+    - replacements:
+        - files: "helm-chart/Chart.yaml"
+          allowEmptyPaths: false
+          disableGlobs: false
+          from: "^version: .*"
+          to: "version: ${nextRelease.version}"
+  - path: "@semantic-release/git"
+    message: "bump chart version: ${nextRelease.version}"
+    assets:
+      - "helm-chart/Chart.yaml"
+publish: "@semantic-release/github"        
