--- a/.releaserc.yaml
+++ b/.releaserc.yaml
@@ -43,5 +43,5 @@ prepare:
   - path: "@semantic-release/git"
     message: "bump chart version: ${nextRelease.version}"
     assets:
-      - "helm-chart/Chart.yaml"
+      - "deployment/helm-chart/Chart.yaml"
 publish: "@semantic-release/github"        
