--- a/.releaserc.yaml
+++ b/.releaserc.yaml
@@ -1,23 +1,4 @@
 tagFormat: app-v${version}
-# plugins:
-#   - - "@semantic-release/commit-analyzer"
-#     - preset: conventionalcommits
-#       releaseRules:
-#         - type: fix(app)
-#           release: patch
-#         - type: feat(app)
-#           release: minor
-#         - type: feat(app)!
-#           release: major
-#   - "@semantic-release/release-notes-generator"
-#   - "@semantic-release/github"
-#   - - "@google/semantic-release-replace-plugin"
-#     - replacements:
-#         - files: "helm-chart/Chart.yaml"
-#           allowEmptyPaths: false
-#           disableGlobs: false
-#           from: "^version: .*"
-#           to: "version: ${nextRelease.version}"
 verifyConditions: "@semantic-release/github"
 analyzeCommits: 
   - path: "@semantic-release/commit-analyzer"
@@ -38,10 +19,10 @@ prepare:
         - files: "helm-chart/Chart.yaml"
           allowEmptyPaths: false
           disableGlobs: false
-          from: "^version: .*"
-          to: "version: ${nextRelease.version}"
+          from: "^appVersion: .*"
+          to: "appVersion: ${nextRelease.version}"
   - path: "@semantic-release/git"
-    message: "bump chart version: ${nextRelease.version}"
+    message: "bump app version: ${nextRelease.version}"
     assets:
       - "deployment/helm-chart/Chart.yaml"
 publish: "@semantic-release/github"        
