--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,17 +1,51 @@
-name: Release
-run-name: ${{ github.actor }} created release 🚀
-on: [release]
+name: BumpAppChart
+run-name: ${{ github.actor }} pushed app updates
+on: 
+  push:
+    branches:
+      - 'main'
+
 jobs:
-  Explore-GitHub-Actions:
+  push-app:
     runs-on: ubuntu-latest
     steps:
       - name: Check out repository code
         uses: actions/checkout@v4
+        with:
+          persist-credentials: false
 
-      - name: Semantic Release
-        uses: cycjimmy/semantic-release-action@v2
+      - uses: dorny/paths-filter@v3
+        id: changes
+        with:
+          filters: |
+            app:
+              - 'cmd/**'
+              - 'internal/**'
+            chart:
+              - 'deployment/helm-chart/**'
+
+      - if: steps.changes.outputs.app == 'true'
+        name: Semantic Release
+        uses: cycjimmy/semantic-release-action@v4
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           extra_plugins: |
             @semantic-release/git
             @semantic-release/exec
             @semantic-release/changelog
+            @google/semantic-release-replace-plugin
+            conventional-changelog-conventionalcommits
+
+      - if: ${{ steps.changes.outputs.app == 'true' || steps.changes.outputs.chart == 'true' }}
+        name: Semantic Release
+        uses: cycjimmy/semantic-release-action@v4
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}        
+        with: 
+          extra_plugins: |
+            @semantic-release/git
+            @semantic-release/exec
+            @semantic-release/changelog
+            @google/semantic-release-replace-plugin
+          working_directory: deployment            
