--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,4 +1,4 @@
-name: BumpAppChart
+name: PublishChart
 run-name: ${{ github.actor }} pushed app updates
 on: 
   push:
@@ -48,4 +48,5 @@ jobs:
             @semantic-release/exec
             @semantic-release/changelog
             @google/semantic-release-replace-plugin
+            conventional-changelog-conventionalcommits
           working_directory: deployment            
