--- a/deployment/.releaserc.yaml
+++ b/deployment/.releaserc.yaml
@@ -4,17 +4,17 @@ analyzeCommits:
   - path: "@semantic-release/commit-analyzer"
     preset: conventionalcommits
     releaseRules:
-      - type: fix(app)
+      - type: fix-app
         release: patch
-      - type: fix(chart)
+      - type: fix-chart
         release: patch        
-      - type: feat(app)
+      - type: feat-app
         release: minor
-      - type: feat(chart)
+      - type: feat-chart
         release: minor        
-      - type: feat(app)!
+      - type: feat-app!
         release: major
-      - type: feat(chart)!
+      - type: feat-chart!
         release: major        
 generateNotes:
   - path: "@semantic-release/release-notes-generator"
