--- a/.releaserc.yaml
+++ b/.releaserc.yaml
@@ -1,19 +1,19 @@
 tagFormat: app-v${version}
-verifyConditions: "@semantic-release/github"
-analyzeCommits: 
-  - path: "@semantic-release/commit-analyzer"
-  - preset: conventionalcommits
-    releaseRules:
-    - type: fix-app
-      release: patch        
-    - type: feat-app
-      release: minor
-    - type: feat-app!
-      release: major
-generateNotes:
-  - path: "@semantic-release/release-notes-generator"
-    preset: conventionalcommits
-prepare:
+preset: conventionalcommits
+plugins:
+  - "@semantic-release/github"
+
+  - - "@semantic-release/commit-analyzer"
+    - releaseRules:
+      - type: fix-app
+        release: patch        
+      - type: feat-app
+        release: minor
+      - type: feat-app!
+        release: major
+
+  - "@semantic-release/release-notes-generator"
+  
   - - "@google/semantic-release-replace-plugin"
     - replacements:
         - files: "deployment/helm-chart/Chart.yaml"
@@ -21,8 +21,8 @@ prepare:
           disableGlobs: false
           from: "^appVersion: .*"
           to: "appVersion: ${nextRelease.version}"
-  - path: "@semantic-release/git"
-    message: "bump app version: ${nextRelease.version}"
-    assets:
-      - "deployment/helm-chart/Chart.yaml"
-publish: "@semantic-release/github"        
+
+  - - "@semantic-release/git"
+    - message: "bump app version: ${nextRelease.version}"
+      assets:
+        - "deployment/helm-chart/Chart.yaml"
