--- a/.releaserc.yaml
+++ b/.releaserc.yaml
@@ -6,7 +6,8 @@ plugins:
   - - "@semantic-release/commit-analyzer"
     - preset: conventionalcommits
       releaseRules:
-        - type: chore(app)
+        - type: chore
+          scope: app
           release: patch
         
   - - "@semantic-release/release-notes-generator"
